# Todo-Full-Stack-Web-Application-GIAIC-Phase-3-

./: .env.example  .gitignore  QWEN.md  README.md  STARTUP.md  docker-compose.yml  package-lock.json
.qwen/agents/: auth-agent.md  fastapi-backend-dev.md  neon-db-manager.md  nextjs-frontend-builder.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: AUTH_IMPLEMENTATION.md  pyproject.toml  requirements.txt
backend-task-api/: .env.example  README.md  check_db_url.py  db_test.py  fix_db.py  fresh_test.py  pyproject.toml  requirements.txt  run_server.py  start_server.bat  test_auth.py  test_auth_performance.py  test_client.py  test_config.py  test_db_connection.py  test_db_performance.py  test_engine.py  test_env.py  update_deps.py
backend-task-api/src/: main.py
backend-task-api/src/agents/: chat_agent.py
backend-task-api/src/api/: auth.py  chat.py  tasks.py
backend-task-api/src/core/: config.py  database.py  logging.py  security.py
backend-task-api/src/models/: auth.py  conversation.py  task.py  user.py
backend-task-api/src/services/: auth_service.py  task_service.py
backend/src/: main.py
frontend/: BUILD_INSTRUCTIONS.md  middleware.ts  next.config.js  package-lock.json  package.json  package.json.minimal  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatButton.css  ChatButton.jsx  ChatButton.tsx  ChatInterface.css  ChatInterface.jsx  ChatInterface.tsx
frontend/lib/: api.ts  auth.tsx  types.ts  (+2 more)
mcp-server/: requirements.txt
(+85 files in other folders)
